@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-25T16:35:30Z",
+  "timestamp" : "2022-10-26T01:39:36Z",
   "count_outdated" : 598,
   "uniques_outdated" : 342,
-  "count" : 644,
+  "count" : 645,
   "uniques" : 368,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
